Remove Error Prone annotations